--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,7 +42,10 @@
 </nav>
 
 <div class="">
-  <router-outlet></router-outlet>
+  <router-outlet 
+  (activate)='onActivate($event)'
+  (deactivate) = 'onDeactivate($event)'
+  ></router-outlet>
 </div>
 
 <hr>
